--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "recoil": "^0.7.7",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
