--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
     "recoil": "^0.7.7",
     "yarn": "^1.22.21"
   },
